kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prosync-hub
  labels:
    name: prosync-hub
    environment: production
